# 241225-bt-p2m-directory-rust-back

./: .gitignore  Cargo.toml  Rocket.toml  commerces_tables_creation.sql
application/: Cargo.toml
application/src/: lib.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/exception/: bank_error.rs  commerce_error.rs  database_error.rs  error_attributes.rs  user_error.rs
domain/src/model/: account.rs  alias_type.rs  bank.rs  bank_status.rs  commerce.rs  (+8 more)
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/commerces/controller/: commerce_controller.rs
infrastructure/src/commerces/controller/dto/: account_dto.rs  commerce_dto.rs
infrastructure/src/db/mssql/banks/adapter/: bank_repository_adapter.rs
infrastructure/src/db/mssql/banks/entity/: bank_entity.rs
infrastructure/src/db/mssql/banks/repository/: bank_repository.rs
infrastructure/src/db/mssql/commerces/adapter/: commerce_repository_adapter.rs
infrastructure/src/db/mssql/commerces/entity/: account_entity.rs  alias_type_entity.rs
infrastructure/src/db/mssql/commerces/entity/wrappers/: commerce_db_info_wrapper.rs
infrastructure/src/db/mssql/commerces/repository/: account_repository.rs  commerce_repository.rs  commerce_status_repository.rs
infrastructure/src/db/mysql/banks/adapter/: bank_repository_adapter.rs
infrastructure/src/db/mysql/banks/entity/: bank_status_entity.rs
infrastructure/src/db/mysql/banks/repository/: bank_repository.rs
infrastructure/src/db/mysql/commerces/adapter/: commerce_repository_adapter.rs
infrastructure/src/db/mysql/commerces/entity/: account_entity.rs  commerce_entity.rs  commerce_status_entity.rs
infrastructure/src/db/mysql/commerces/repository/: account_repository.rs  commerce_repository.rs  commerce_status_repository.rs
infrastructure/src/entrypoint/commerces/: commerce_controller.rs
infrastructure/src/entrypoint/commerces/dto/: account_dto.rs  commerce_dto.rs
infrastructure/src/entrypoint/controller/commerces/: commerce_controller.rs
runner/: Cargo.toml
runner/src/: main.rs
(+8 files in other folders)
