[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"