[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
rocket = { version = "0.5.1", features = ["json"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-native-tls" ] }